--- a/dark.css
+++ b/dark.css
@@ -5,9 +5,12 @@
 
 .app {
   position: relative;
+  background-color: #3c3c3c;
 }
 
 #content {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-wrap: wrap;
 }
@@ -15,7 +18,7 @@
 .h {
   width: 100%;
   height: 24px;
-  color: grey;
+  color: #cccccc;
   margin-top: 12px;
   margin-left: 3px;
   margin-bottom: 9px;
@@ -28,13 +31,13 @@
   align-items: center;
   position: relative;
   margin: 3px;
-  border: 1px lightgrey solid;
-  color: grey;
+  border: 1px #cccccc solid;
+  color: #cccccc;
   border-radius: 20px;
 }
 
 .bt:hover {
-  background-color: rgb(230, 230, 230);
+  background-color: grey;
 }
 
 .del_bt {
@@ -69,8 +72,11 @@
   margin: 3px;
   margin-left: 2px;
   margin-right: 7px;
-  white-space: nowrap;
+  white-space: nowrap; /* 不换行 */
   cursor: pointer;
+  overflow: hidden; /* 隐藏超出部分 */
+  text-overflow: ellipsis; /* 显示省略号 */
+  width: 150px; /* 最大宽度为150px */
 }
 
 #search-box {
@@ -80,7 +86,7 @@
   height: 20px;
   width: 200px;
   outline: none;
-  border: 1px solid lightgrey;
+  border: 1px solid grey;
   border-radius: 2px;
 }
 
@@ -95,8 +101,8 @@
   right: 0;
   top: 0;
   z-index: 999;
-  background: white;
-  border: 1px solid lightgrey;
+  background: lightgrey;
+  border: 1px solid grey;
   border-radius: 2px;
 }
 
@@ -108,7 +114,7 @@
 }
 
 .search_item:hover {
-  background-color: lightgrey;
+  background-color: grey;
 }
 
 .item_title {
@@ -125,7 +131,7 @@ a {
   margin: 0px;
   padding: 0px;
   text-decoration: none;
-  color: grey;
+  color: #cccccc;
 }
 
 footer {
