--- a/dark.css
+++ b/dark.css
@@ -3,9 +3,14 @@
   padding: 0px;
 }
 
+html, body {
+  height: 100%;
+  width: 100%;
+  background-color: #3c3c3c;
+}
+
 .app {
   position: relative;
-  background-color: #3c3c3c;
 }
 
 #content {
