--- a/light.css
+++ b/light.css
@@ -3,6 +3,12 @@
   padding: 0px;
 }
 
+html, body {
+  height: 100%;
+  width: 100%;
+  background-color: #3c3c3c;
+}
+
 .app {
   position: relative;
 }
